Fix h2 spacing after code element

--- a/src/templates/BlogPost/BlogPost.module.css
+++ b/src/templates/BlogPost/BlogPost.module.css
@@ -16,6 +16,7 @@
   font-size: 1.5rem;
   border-bottom: 1px solid black;
   padding-left: 1rem;
+  padding-top: 1rem;
 }
 .postBody img {
   width: 90%;
